# irenogram

./: .gitignore  .readthedocs.yaml  MANIFEST.in  Makefile  NOTICE  README.md  hatch_build.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto_release.yml  build-docs.yml  ci.yml  github_release.yml  pypi_release.yml
compiler/api/: compiler.py
compiler/docs/: compiler.py
compiler/errors/: compiler.py
docs/: .gitignore
docs/source/: conf.py  index.rst  requirements.txt
docs_static/: docs.json  irenogram.css  irenogram_docs.js
pyrogram/: __init__.py  client.py  dispatcher.py  emoji.py  file_id.py  filters.py  mime_types.py  qrlogin.py  sync.py  utils.py
pyrogram/connection/: __init__.py  connection.py
pyrogram/crypto/: aes.py  mtproto.py  prime.py  rsa.py
pyrogram/enums/: __init__.py  auto_name.py  block_list.py  business_schedule.py  button_style.py  chat_action.py  chat_event_action.py  chat_join_type.py  chat_member_status.py  chat_members_filter.py  chat_type.py  client_platform.py  folder_color.py  gift_attribute_type.py  gift_for_resale_order.py  gift_purchase_offer_state.py  gift_type.py  listerner_types.py  mask_point_type.py  media_area_type.py  message_entity_type.py  message_media_type.py  message_origin_type.py  message_service_type.py  messages_filter.py  next_code_type.py  paid_reaction_privacy.py  parse_mode.py  payment_form_type.py  phone_call_discard_reason.py  phone_number_code_type.py  poll_type.py  privacy_key.py  privacy_rule_type.py  profile_color.py  profile_tab.py  reaction_type.py  reply_color.py  sent_code_type.py  sticker_type.py  (+6 more)
pyrogram/errors/: __init__.py  rpc_error.py
pyrogram/examples/: raw_updates.py  use_inline_bots.py
pyrogram/handlers/: __init__.py  bot_business_connect_handler.py  bot_business_message_handler.py  business_connection_handler.py  business_message_handler.py  callback_query_handler.py  chat_boost_handler.py  chat_join_request_handler.py  chat_member_updated_handler.py  chosen_inline_result_handler.py  connect_handler.py  conversation_handler.py  deleted_bot_business_messages_handler.py  deleted_business_messages_handler.py  deleted_messages_handler.py  disconnect_handler.py  edited_bot_business_message_handler.py  edited_business_message_handler.py  edited_message_handler.py  error_handler.py  handler.py  inline_query_handler.py  managed_bot_handler.py  managed_bot_updated_handler.py  message_handler.py  message_reaction_count_handler.py  message_reaction_count_updated_handler.py  message_reaction_handler.py  message_reaction_updated_handler.py  poll_handler.py  pre_checkout_query_handler.py  purchased_paid_media_handler.py  raw_update_handler.py  shipping_query_handler.py  start_handler.py  stop_handler.py  story_handler.py  user_status_handler.py
pyrogram/helpers/: __init__.py  helpers.py
pyrogram/methods/: __init__.py
pyrogram/nav/: __init__.py  pagination.py
pyrogram/parser/: __init__.py  html.py  markdown.py  parser.py  (+1 more)
(+8157 files in other folders)
